Revise: Update StatisticsServiceImplTest